[gd_scene load_steps=4 format=2]

[ext_resource path="res://nodes/puddle/Puddle.gd" type="Script" id=1]
[ext_resource path="res://nodes/puddle/Puddle_1/PuddleAnimatedSprite1.tscn" type="PackedScene" id=2]
[ext_resource path="res://nodes/puddle/Puddle_1/PuddleCollisionPolygon1.tscn" type="PackedScene" id=3]

[node name="Puddle" type="Area2D"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )

[node name="PuddleAnimatedSprite1" parent="." index="0" instance=ExtResource( 2 )]

[node name="PuddleCollisionPolygon1" parent="." index="1" instance=ExtResource( 3 )]

[connection signal="area_entered" from="." to="." method="_on_Puddle_area_entered"]

[connection signal="animation_finished" from="PuddleAnimatedSprite1" to="." method="_on_AnimatedSprite_animation_finished"]


